--- a/ShakeAnAppleBlog.Web/package.json
+++ b/ShakeAnAppleBlog.Web/package.json
@@ -33,10 +33,14 @@
     "bootstrap": "^3.3.7"
   },
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-less": "3.1.0",
     "browser-sync": "2.14.0",
     "concurrently": "^2.2.0",
+    "del": "^2.2.2",
+    "gulp": "^3.9.1",
+    "gulp-less": "3.1.0",
+    "gulp-minify-css-names": "^1.3.3",
+    "gulp-typescript": "^2.13.6",
+    "gulp-uglify": "^2.0.0",
     "lite-server": "^2.2.2",
     "typescript": "^1.8.10",
     "typings": "^1.3.2"
