--- a/ShakeAnAppleBlog.Web/package.json
+++ b/ShakeAnAppleBlog.Web/package.json
@@ -37,6 +37,7 @@
     "concurrently": "^2.2.0",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
     "gulp-less": "3.1.0",
     "gulp-minify-css-names": "^1.3.3",
     "gulp-typescript": "^2.13.6",
